gl51-master/src/test/deca/context/invalid/test_rule3_31.deca
// Description
// Expression non compatible avec print

{
    boolean a;
    println(a);
    //PASSED
}